--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -75,7 +75,7 @@
     <div id="footer">
         <div class="cont">
             <p id="footertxt">
-                Powered by  <a href="http://digone.io" target="blank">Digone</a> | <a href="mailto:margaux@marseille-solutions.fr">Contact</a> | <a href="https://www.facebook.com/marseille.solutions">Suivez nous sur les réseaux sociaux</a> |  {# <a href="{{ path('admin_homepage') }}">Admin</a> #}
+                Powered by  <a href="http://digone.io" target="blank">Digone</a> | <a href="mailto:margaux@marseille-solutions.fr">Contact</a> | <a href="https://www.facebook.com/marseille.solutions">Suivez nous sur les réseaux sociaux</a> |  <a href="{{ path('admin_homepage') }}">Admin</a>
             </p>
         </div>
     </div>
