--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -57,7 +57,7 @@
             <div class="ssbtn">
                 <a href="{{ path('core_media') }}">
                 <div id="btm4" class="btnmenu">
-                    <p class="txtmenu">MEDIAS</p>
+                    <p class="txtmenu">MÉDIAS</p>
                 </div>
                 </a>
             </div>
