--- a/src/Pages/CoreBundle/Resources/views/Pages/event.html.twig
+++ b/src/Pages/CoreBundle/Resources/views/Pages/event.html.twig
@@ -59,7 +59,7 @@
                 {% endfor %}
             </div>
             <div class="titrecatevent">
-                <p>événements passé</p>
+                <p>événements passés</p>
             </div>
             <div id="passe">
                 {% for event in events %}
