--- a/src/Pages/CoreBundle/Resources/views/Pages/info.html.twig
+++ b/src/Pages/CoreBundle/Resources/views/Pages/info.html.twig
@@ -20,7 +20,7 @@
                 <img src="{{ asset(['media/infog/', info.buiImg]|join) }}">
             </div>
             <div class="ssbtn" id="btncomment">
-                <a href="#">
+                <a href="{{ path('core_solution') }}">
                     <div class="btnmenu">
                         <p class="txtmenu">VOIR LES SOLUTIONS</p>
                     </div>
